WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183363
Cache hasComplexSelectorsForStyleAttribute bit
https://bugs.webkit.org/show_bug.cgi?id=183363
Summary
Cache hasComplexSelectorsForStyleAttribute bit
Antti Koivisto
Reported
2018-03-06 03:56:00 PST
Factor this special case code to DocumentRuleSets and cache the bit.
Attachments
patch
(4.97 KB, patch)
2018-03-06 03:58 PST
,
Antti Koivisto
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2018-03-06 03:58:41 PST
Created
attachment 335083
[details]
patch
Andreas Kling
Comment 2
2018-03-06 07:47:16 PST
Comment on
attachment 335083
[details]
patch r=me
alan
Comment 3
2018-03-06 10:48:50 PST
(In reply to Andreas Kling from
comment #2
)
> Comment on
attachment 335083
[details]
> patch > > r=me
wow wait, what!?
Antti Koivisto
Comment 4
2018-03-06 11:22:25 PST
(In reply to Andreas Kling from
comment #2
)
> Comment on
attachment 335083
[details]
> patch > > r=me
Thank you Kling,
WebKit Commit Bot
Comment 5
2018-03-06 11:41:38 PST
Comment on
attachment 335083
[details]
patch Rejecting
attachment 335083
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 335083, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: e too many unreachable loose objects; run 'git prune' to remove them. Current branch master is up to date. Auto packing the repository in background for optimum performance. See "git help gc" for manual housekeeping. error: The last gc run reported the following. Please correct the root cause and remove /Volumes/Data/EWS/WebKit/.git/gc.log. Automatic cleanup will not be performed until the file is removed. warning: There are too many unreachable loose objects; run 'git prune' to remove them. Full output:
http://webkit-queues.webkit.org/results/6829317
alan
Comment 6
2018-03-06 12:39:53 PST
(In reply to WebKit Commit Bot from
comment #5
)
> Comment on
attachment 335083
[details]
> patch > > Rejecting
attachment 335083
[details]
from commit-queue. > > Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', > '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', > 'land-attachment', '--force-clean', '--non-interactive', > '--parent-command=commit-queue', 335083, '--port=mac']" exit_code: 2 cwd: > /Volumes/Data/EWS/WebKit > > Last 500 characters of output: > e too many unreachable loose objects; run 'git prune' to remove them. > > Current branch master is up to date. > Auto packing the repository in background for optimum performance. > See "git help gc" for manual housekeeping. > error: The last gc run reported the following. Please correct the root cause > and remove /Volumes/Data/EWS/WebKit/.git/gc.log. > Automatic cleanup will not be performed until the file is removed. > > warning: There are too many unreachable loose objects; run 'git prune' to > remove them. > > > Full output:
http://webkit-queues.webkit.org/results/6829317
Thank you, Kling.
Antti Koivisto
Comment 7
2018-03-06 12:51:19 PST
Lies. This did land as
https://trac.webkit.org/r229332
Radar WebKit Bug Importer
Comment 8
2018-03-06 12:52:19 PST
<
rdar://problem/38190645
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug