Cache hasComplexSelectorsForStyleAttribute bit https://bugs.webkit.org/show_bug.cgi?id=183363

Reviewed by Andreas Kling.

* css/DocumentRuleSets.cpp:
(WebCore::DocumentRuleSets::collectFeatures const):
(WebCore::DocumentRuleSets::hasComplexSelectorsForStyleAttribute const):

Cache the bit to avoid hash lookups.

* css/DocumentRuleSets.h:
* dom/StyledElement.cpp:
(WebCore::StyledElement::invalidateStyleAttribute):
(WebCore::shouldSynchronizeStyleAttributeImmediatelyForInvalidation): Deleted.

Move code to DocumentRuleSets.


Canonical link: https://commits.webkit.org/199044@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229332 268f45cc-cd09-0410-ab3c-d52691b4dbfc