Source/WebCore/dom/StyledElement.cpp
@@ -146,19 +146,6 @@ void StyledElement::styleAttributeChanged(const AtomicString& newStyleString, At
     InspectorInstrumentation::didInvalidateStyleAttr(document(), *this);
 }
 
-static bool shouldSynchronizeStyleAttributeImmediatelyForInvalidation(StyledElement& element)
-{
-    // In rare case there is a complex attribute selector targeting style attribute (like "[style] ~ div") we need to synchronize immediately.
-    auto* ruleSets = element.styleResolver().ruleSets().attributeInvalidationRuleSets(styleAttr->localName());
-    if (!ruleSets)
-        return false;
-    for (auto& ruleSet : *ruleSets) {
-        if (ruleSet.matchElement != MatchElement::Subject)
-            return true;
-    }
-    return false;
-}
-
 void StyledElement::invalidateStyleAttribute()
 {
     if (usesStyleBasedEditability(*inlineStyle()))
@@ -167,7 +154,8 @@ void StyledElement::invalidateStyleAttribute()
     elementData()->setStyleAttributeIsDirty(true);
     invalidateStyle();
 
-    if (shouldSynchronizeStyleAttributeImmediatelyForInvalidation(*this)) {
+    // In the rare case of selectors like "[style] ~ div" we need to synchronize immediately to invalidate.
+    if (styleResolver().ruleSets().hasComplexSelectorsForStyleAttribute()) {
         if (auto* inlineStyle = this->inlineStyle()) {
             elementData()->setStyleAttributeIsDirty(false);
             auto newValue = inlineStyle->asText();
